<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MicroTasks</string>
    <string name="action_settings">Settings</string>
    <string name="swipe_to_start">&lt;&lt;&lt;Swipe to start when instructed&lt;&lt;&lt;</string>
    <string name="run_finished">Run finished!</string>
    <string name="swipe_to_next_run">&lt;&lt;&lt;Swipe to start next run when instructed&lt;&lt;&lt;</string>
    <string name="swipe_to_continue">&lt;&lt;&lt;Swipe to continue&lt;&lt;&lt;</string>
    <string name="one_choice_question">Do you like Android?</string>
    <string name="mutiple_choice_question">What are the three coolest houses at Hogwarts?</string>
    <string name="numerical_question">What is 5 divided by 2?</string>
    <string name="numerical_question_reset">What is the value of Pi?</string>
    <string name="answer_option_one">Yes</string>
    <string name="answer_option_two">No</string>
    <string name="answer_dont_know">Dont know</string>
    <string name="griffindor">Gryffindor</string>
    <string name="slytherin">Slytherin</string>
    <string name="rawenclaw">Rawenclaw</string>
    <string name="huffelpuff">Huffelpuff</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="point">.</string>
    <string name="backspace">&lt;--</string>

    <string-array name="questions">
        <item>How many condensate pumps are running on turbine 31?</item>
        <item>How many condensate pumps are running on turbine 32?</item>
        <item>How many condensate pumps are running on turbine 33?</item>
        <item>How many condensate pumps are running on turbine 34?</item>
        <item>How many condensate pumps are running on turbine 35?</item>
        <item>How many condensate pumps are running on turbine 36?</item>
        <item>How many condensate pumps are running on turbine 37?</item>
        <item>How many condensate pumps are running on turbine 38?</item>
        <item>How many condensate pumps are running on turbine 39?</item>
        <item>How many condensate pumps are running on turbine 40?</item>
    </string-array>

    <string-array name="mock_questions">
        <item>How many condensate pumps are running on turbine 31?</item> <!--Q1-->
        <item>On turbine 31, what is the status of pump P204?</item> <!--Q2-->
        <item>Which pump is in manual on turbine 32?</item> <!--Q3-->
        <item>On turbine 32, what is the status of the MFW pump 2?</item> <!--Q4-->
        <item>On turbine 31, which high temperature drain pump has the lowest current?</item> <!--Q5-->
        <item>On turbine 32, which MFW pump has tripped?</item> <!--Q6-->
        <item>On turbine 31, what is the status of P108?</item> <!--Q7-->
        <item>What is the pressure from the MFW pumps on turbine 31?</item> <!--Q8-->
        <item>Which MFW pump on turbine 32 has the highest current?</item> <!--Q9-->
        <item>Which turbine has a switchgear error or fault indication?</item> <!--Q10-->
        <item>Are the high temperature preheaters by-passed?</item> <!--Q11-->
        <item>Are any of the turbine regulating valves throttled?</item> <!--Q12-->
        <item>Are all turbine 32 stop valves open?</item> <!--Q13-->
        <item>What is the condenser pressure on turbine 31?</item> <!--Q14-->
        <item>Are operating MFW pumps on turbine 31 operating properly?</item> <!--Q15-->
        <item>Are any AFW cross over valves miss-positioned?</item> <!--Q16-->
        <item>On which SG is a MFW bypass valve miss-positioned?</item> <!--Q17-->
        <item>Which SG atmospheric control valve is in manual control?</item> <!--Q18-->
        <item>Are all MSIVs closed?</item> <!--Q19-->
        <item>Is the stop valve to the turbine-driven AFW pump closed?</item> <!--Q20-->
        <item>How many condensate pumps are running on turbine 31?</item>
        <item>On turbine 31, what is the status of pump P204?</item>
        <item>Which pump is in manual on turbine 32?</item>
        <item>On turbine 32, what is the status of the MFW pump 2?</item>
        <item>On turbine 31, which high temperature drain pump has the lowest current?</item>
        <item>On turbine 32, which MFW pump has tripped?</item>
        <item>On turbine 31, what is the status of P108?</item>
        <item>What is the pressure from the MFW pumps on turbine 31?</item>
        <item>Which MFW pump on turbine 32 has the highest current?</item>
        <item>Which turbine has a switchgear error or fault indication?</item>
        <item>Are the high temperature preheaters by-passed?</item>
        <item>Are any of the turbine regulating valves throttled?</item>
        <item>Are all turbine 32 stop valves open?</item>
        <item>What is the condenser pressure on turbine 31?</item>
        <item>Are operating MFW pumps on turbine 31 operating properly?</item>
        <item>Are any AFW cross over valves miss-positioned?</item>
        <item>On which SG is a MFW bypass valve miss-positioned?</item>
        <item>Which SG atmospheric control valve is in manual control?</item>
        <item>Are all MSIVs closed?</item>
        <item>Is the stop valve to the turbine-driven AFW pump closed?</item>
        <item>How many condensate pumps are running on turbine 31?</item>
        <item>On turbine 31, what is the status of pump P204?</item>
        <item>Which pump is in manual on turbine 32?</item>
        <item>On turbine 32, what is the status of the MFW pump 2?</item>
        <item>On turbine 31, which high temperature drain pump has the lowest current?</item>
        <item>On turbine 32, which MFW pump has tripped?</item>
        <item>On turbine 31, what is the status of P108?</item>
        <item>What is the pressure from the MFW pumps on turbine 31?</item>
        <item>Which MFW pump on turbine 32 has the highest current?</item>
        <item>Which turbine has a switchgear error or fault indication?</item>
        <item>Are the high temperature preheaters by-passed?</item>
        <item>Are any of the turbine regulating valves throttled?</item>
        <item>Are all turbine 32 stop valves open?</item>
        <item>What is the condenser pressure on turbine 31?</item>
        <item>Are operating MFW pumps on turbine 31 operating properly?</item>
        <item>Are any AFW cross over valves miss-positioned?</item>
        <item>On which SG is a MFW bypass valve miss-positioned?</item>
        <item>Which SG atmospheric control valve is in manual control?</item>
        <item>Are all MSIVs closed?</item>
        <item>Is the stop valve to the turbine-driven AFW pump closed?</item>
    </string-array>
    <string-array name="mock_correct_answers">
        <item>3</item> <!--Q1-->
        <item>Stopped</item> <!--Q2-->
        <item>2</item> <!--Q3-->
        <item>Tripped</item> <!--Q3-->
        <item>P104</item> <!--Q4-->
        <item>2</item> <!--Q5-->
        <item>Running</item> <!--Q6-->
        <item>1139</item> <!--Q7-->
        <item>1</item> <!--Q8-->
        <item>32</item> <!--Q9-->
        <item>NO</item> <!--Q10-->
        <item>NO</item> <!--Q11-->
        <item>YES</item> <!--Q12-->
        <item>0.70</item> <!--Q13-->
        <item>YES</item> <!--Q14-->
        <item>YES</item> <!--Q15-->
        <item>3</item> <!--Q16-->
        <item>SG-2</item> <!--Q17-->
        <item>YES</item> <!--Q18-->
        <item>NO</item> <!--Q19-->
        <item>3</item> <!--Q20-->
        <item>Stopped</item>
        <item>2</item>
        <item>Tripped</item>
        <item>P104</item>
        <item>2</item>
        <item>Running</item>
        <item>1139</item>
        <item>1</item>
        <item>32</item>
        <item>NO</item>
        <item>NO</item>
        <item>YES</item>
        <item>0.70</item>
        <item>YES</item>
        <item>YES</item>
        <item>3</item>
        <item>SG-2</item>
        <item>YES</item>
        <item>NO</item>
        <item>3</item>
        <item>Stopped</item>
        <item>2</item>
        <item>Tripped</item>
        <item>P104</item>
        <item>2</item>
        <item>Running</item>
        <item>1139</item>
        <item>1</item>
        <item>32</item>
        <item>NO</item>
        <item>NO</item>
        <item>YES</item>
        <item>0.70</item>
        <item>YES</item>
        <item>YES</item>
        <item>3</item>
        <item>SG-2</item>
        <item>YES</item>
        <item>NO</item>
    </string-array>

    <string-array name="mock_question_types">
        <item>Numerical</item> <!--Q1-->
        <item>SingleChoice</item> <!--Q2-->
        <item>Numerical</item> <!--Q3-->
        <item>SingleChoice</item> <!--Q4-->
        <item>SingleChoice</item> <!--Q5-->
        <item>Numerical</item> <!--Q6-->
        <item>SingleChoice</item> <!--Q7-->
        <item>Numerical</item> <!--Q8-->
        <item>Numerical</item> <!--Q9-->
        <item>Numerical</item> <!--Q10-->
        <item>SingleChoice</item> <!--Q11-->
        <item>SingleChoice</item> <!--Q12-->
        <item>SingleChoice</item> <!--Q13-->
        <item>Numerical</item> <!--Q14-->
        <item>SingleChoice</item> <!--Q15-->
        <item>SingleChoice</item> <!--Q16-->
        <item>Numerical</item> <!--Q17-->
        <item>MultipleChoice</item> <!--Q18-->
        <item>SingleChoice</item> <!--Q19-->
        <item>SingleChoice</item> <!--Q20-->
        <item>Numerical</item> <!--Q1-->
        <item>SingleChoice</item> <!--Q2-->
        <item>Numerical</item> <!--Q3-->
        <item>SingleChoice</item> <!--Q4-->
        <item>SingleChoice</item> <!--Q5-->
        <item>Numerical</item> <!--Q6-->
        <item>SingleChoice</item> <!--Q7-->
        <item>Numerical</item> <!--Q8-->
        <item>Numerical</item> <!--Q9-->
        <item>Numerical</item> <!--Q10-->
        <item>SingleChoice</item> <!--Q11-->
        <item>SingleChoice</item> <!--Q12-->
        <item>SingleChoice</item> <!--Q13-->
        <item>Numerical</item> <!--Q14-->
        <item>SingleChoice</item> <!--Q15-->
        <item>SingleChoice</item> <!--Q16-->
        <item>Numerical</item> <!--Q17-->
        <item>MultipleChoice</item> <!--Q18-->
        <item>SingleChoice</item> <!--Q19-->
        <item>SingleChoice</item> <!--Q20-->
        <item>Numerical</item> <!--Q1-->
        <item>SingleChoice</item> <!--Q2-->
        <item>Numerical</item> <!--Q3-->
        <item>SingleChoice</item> <!--Q4-->
        <item>SingleChoice</item> <!--Q5-->
        <item>Numerical</item> <!--Q6-->
        <item>SingleChoice</item> <!--Q7-->
        <item>Numerical</item> <!--Q8-->
        <item>Numerical</item> <!--Q9-->
        <item>Numerical</item> <!--Q10-->
        <item>SingleChoice</item> <!--Q11-->
        <item>SingleChoice</item> <!--Q12-->
        <item>SingleChoice</item> <!--Q13-->
        <item>Numerical</item> <!--Q14-->
        <item>SingleChoice</item> <!--Q15-->
        <item>SingleChoice</item> <!--Q16-->
        <item>Numerical</item> <!--Q17-->
        <item>MultipleChoice</item> <!--Q18-->
        <item>SingleChoice</item> <!--Q19-->
        <item>SingleChoice</item> <!--Q20-->
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
